
[project]
name = "stock-market-analyst"
version = "0.1.0"
description = "Stock Market Analyst - A comprehensive stock screener for Indian markets"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "yfinance>=0.2.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=1.4.0",
    "pandas>=2.0.0",
    "numpy<2.0",
    "pytz>=2023.3",
    "gunicorn>=21.2.0",
    "tensorflow>=2.14.0",
    "scikit-learn>=1.7.1",
    "joblib>=1.5.1",
]
